@@ -131,11 +131,27 @@ class RObjectMixin(object):
             else:
                 raise rre
     def _rclass_set(self, value):
-        res = self.__rclass_set(self, value)
+        if isinstance(value, str):
+            value = (value, )
+        new_cls = rpy2.rinterface.StrSexpVector(value)
+        res = self.__rclass_set(self, new_cls)
         self.__sexp__ = res.__sexp__
             
     rclass = property(_rclass_get, _rclass_set, None,
-                      "R class for the object, stored as an R string vector.")
+                      """
+R class for the object, stored as an R string vector.
+
+When setting the rclass, the new value will be:
+- wrapped in a Python tuple if a string (the R class
+  is a vector of strings, and this is made for convenience)
+- wrapped in a StrSexpVector
+Note that when setting the class R may make a copy of
+the whole object (R is mostly a functional language).
+If this must be avoided, and if the number of parent
+classes before and after the change are compatible,
+the class name can be changed in-place by replacing "
+vector elements.
+                      """)
 
 
     # Python 3-only
